--- a/HOAmanager/src/main/resources/static/index.css
+++ b/HOAmanager/src/main/resources/static/index.css
@@ -11,10 +11,19 @@ html, body {
   }
 
   .video-container video {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
+
+
+  .custom-modal .modal-content {
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  
