--- a/HOAmanager/src/main/resources/templates/assetActions.html
+++ b/HOAmanager/src/main/resources/templates/assetActions.html
@@ -68,24 +68,25 @@
                                     value="no" />
                                   <label class="form-check-label" for="noRent">No</label>
                                 </div>
-                                <div class="row" style="margin-top: 2vh;">
+                                <div class="row" style="margin-top: 2.5vh;">
                                     <div class="col-md-5 mb-4">
                   
-                                      <select class="select">
-                                        <option disabled selected>State</option>
-                                        <option value="2">Option 1</option>
-                                        <option value="3">Option 2</option>
-                                        <option value="4">Option 3</option>
+                                      <select class="select" id="type">
+                                        <option disabled selected>Type</option>
+                                        <option value="P">Property</option>
+                                        <option value="E">Equipment</option>
+                                        <option value="F">F&F</option>
+                                        <option value="O">Others</option>
                                       </select>
                   
                                     </div>
                                     <div class="col-md-6 mb-4">
-                  
-                                      <select class="select">
-                                        <option value="1">City</option>
-                                        <option value="2">Option 1</option>
-                                        <option value="3">Option 2</option>
-                                        <option value="4">Option 3</option>
+                                      <select class="select" id="status">
+                                        <option disabled selected>Status</option>
+                                        <option value="W">Working</option>
+                                        <option value="D">Deteriorated</option>
+                                        <option value="P">For Repair</option>
+                                        <option value="S">For Disposal</option>
                                       </select>
                   
                                     </div>
@@ -95,27 +96,45 @@
               
                               <div class="form-outline mb-4">
                                 <input type="text" id="form3Example9" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example9">DOB</label>
+                                <label class="form-label" for="form3Example9">Location Lattitude</label>
                               </div>
               
                               <div class="form-outline mb-4">
                                 <input type="text" id="form3Example90" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example90">Pincode</label>
+                                <label class="form-label" for="form3Example90">Location Longtitude</label>
                               </div>
               
                               <div class="form-outline mb-4">
                                 <input type="text" id="form3Example99" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example99">Course</label>
-                              </div>
-              
-                              <div class="form-outline mb-4">
-                                <input type="text" id="form3Example97" class="form-control form-control-lg" />
-                                <label class="form-label" for="form3Example97">Email ID</label>
+                                <label class="form-label" for="form3Example99">Home Owner Association Name</label>
                               </div>
               
                               <div class="d-flex justify-content-end pt-3">
-                                <button type="button" class="btn btn-light btn-lg">Reset all</button>
-                                <button type="button" class="btn btn-warning btn-lg ms-2">Submit form</button>
+                                <button type="button" class="btn btn-warning btn-lg ms-2" onclick="addAsset()">Submit Form</button>
+                                <script>
+                                    function addAsset() {
+                                        const asset = {
+                                            id: document.getElementById('form3Example1m').value,
+                                            name: document.getElementById('form3Example1n').value,
+                                            acquisitionDate: document.getElementById('form3Example1m1').value,
+                                            assetValue: document.getElementById('form3Example1n1').value,
+                                            description: document.getElementById('form3Example8').value,
+                                            forRent: document.getElementById('yesRent').checked,
+                                            type: document.getElementById('type').value,
+                                            status: document.getElementById('status').value,
+                                            locLattitude: document.getElementById('form3Example9').value,
+                                            locLongitude: document.getElementById('form3Example90').value,
+                                            hoaName: document.getElementById('form3Example99').value
+                                        };
+                                        fetch('/addAsset', {
+                                            method: 'POST',
+                                            headers: {
+                                                'Content-Type': 'application/json'
+                                            },
+                                            body: JSON.stringify(asset)
+                                        });
+                                    }
+                                </script>
                               </div>
               
                             </div>
