--- a/HOAmanager/src/main/resources/templates/dashboard.html
+++ b/HOAmanager/src/main/resources/templates/dashboard.html
@@ -6,9 +6,11 @@
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="dashboard.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
   <body>
     <div th:replace="~{navbar}"></div>
+    <div th:replace="~{deleteRow}"></div>
     
     <div class="workboard table-responsive">
         <table class="table table-dark">
@@ -29,9 +31,9 @@
                 <td colspan="1" th:text="${row.status}" ></td>
                 <th scope="col" class="table-active"  style="max-width: 20vh;">
                     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#assetUpdate" th:attr="data-id=${row.id}" onclick="callJavaFunction(this.getAttribute('data-id'));">Update</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#assetUpdate" th:attr="data-id=${row.id}" onclick="updateData(this.getAttribute('data-id'));">Update</button>
                         <script>
-                            function callJavaFunction(id) {
+                            function updateData(id) {
                                 var xhr = new XMLHttpRequest();
                                 xhr.open("GET", "/myEndpoint?id=" + id);
                                 xhr.onload = function() {
@@ -53,7 +55,20 @@
                                 xhr.send();
                             }
                         </script>
-                        <button type="button" class="btn btn-dark">Delete</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" th:attr="data-id=${row.id}" onclick="deleteRow(this.getAttribute('data-id'))">Delete</button>
+                        <script>
+                            function deleteRow(id){
+                                // Bind click event to Confirm button
+                                $('#staticBackdrop .btn-outline-danger').on('click', function() {
+                                    var xhr = new XMLHttpRequest();
+                                    xhr.open("GET", "/myEndpoint2?id=" + id);
+                                    xhr.send();
+                                    setTimeout(function() {
+                                        location.reload();
+                                    }, 2000);
+                                });
+                            }
+                        </script>
                         <button type="button" class="btn btn-dark">Dispose</button>
                         <button type="button" class="btn btn-dark">View History</button>
                     </div>
