--- a/HOAmanager/src/main/resources/templates/dashboard.html
+++ b/HOAmanager/src/main/resources/templates/dashboard.html
@@ -10,7 +10,8 @@
 </head>
   <body>
     <div th:replace="~{navbar}"></div>
-    <div th:replace="~{deleteRow}"></div>
+    <div th:replace="~{deleteDisposeRow}"></div>
+    <div th:replace="~{assetActions}"></div>
     
     <div class="workboard table-responsive">
         <table class="table table-dark">
@@ -20,7 +21,23 @@
                 <th scope="col">Description</th>
                 <th scope="col" class="table-active">Type</th>
                 <th scope="col">Status</th>
-                <th scope="col" class="table-active" style="max-width: 20vh;">Action <button type="button" class="btn btn-success">Insert</button></th>
+                <th scope="col" class="table-active" style="max-width: 20vh;">Action 
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#assetInsert" onclick="insertAsset()">Insert</button>
+                    <script>
+                        function insertAsset(){
+                            console.log("Hello World!");
+                            // Bind click event to Confirm button
+                            var xhr = new XMLHttpRequest();
+                            xhr.open("GET", "/myEndpoint3");
+                            xhr.onload = function() {
+                                var nextID = xhr.response;
+                                document.getElementById("newID").value = nextID;
+                            }
+                            xhr.send();
+
+                        }
+                    </script>
+                </th>
             </thead>
             <tbody>
               <tr class="fs-4" th:each="row : ${rows}">
@@ -31,31 +48,31 @@
                 <td colspan="1" th:text="${row.status}" ></td>
                 <th scope="col" class="table-active"  style="max-width: 20vh;">
                     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#assetUpdate" th:attr="data-id=${row.id}" onclick="updateData(this.getAttribute('data-id'));">Update</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#assetUpdate" th:attr="data-id=${row.id}" th:disabled="${row.status == 'X'}" onclick="updateData(this.getAttribute('data-id'));">Update</button>
                         <script>
                             function updateData(id) {
                                 var xhr = new XMLHttpRequest();
                                 xhr.open("GET", "/myEndpoint?id=" + id);
                                 xhr.onload = function() {
                                     var asset = JSON.parse(xhr.response); // parse the JSON response
-                                    document.getElementById("form3Example1m").value = asset.id; // set the value of the input field to the asset ID
-                                    document.getElementById("form3Example1n").value = asset.name;
-                                    document.getElementById("form3Example1m1").value = asset.acquisitionDate;
-                                    document.getElementById("form3Example1n1").value = asset.assetValue;
-                                    document.getElementById("form3Example8").value = asset.description;
-                                    document.getElementById("yesRent").checked = asset.forrent;
-                                    document.getElementById("noRent").checked = !asset.forrent;
-                                    document.querySelector("#type").value = asset.type;
-                                    document.querySelector("#status").value = asset.status;
-                                    document.getElementById("form3Example9").value = asset.locLattitude;
-                                    document.getElementById("form3Example90").value = asset.locLongitude;
-                                    document.getElementById("form3Example99").value = asset.hoaName;
+                                    document.getElementById("updateID").value = asset.id; // set the value of the input field to the asset ID
+                                    document.getElementById("updateName").value = asset.name;
+                                    document.getElementById("updateDate").value = asset.acquisitionDate;
+                                    document.getElementById("updateValue").value = asset.assetValue;
+                                    document.getElementById("updateDescription").value = asset.description;
+                                    document.getElementById("updateYesRent").checked = asset.forrent;
+                                    document.getElementById("updateNoRent").checked = !asset.forrent;
+                                    document.querySelector("#updateType").value = asset.type;
+                                    document.querySelector("#updateStatus").value = asset.status;
+                                    document.getElementById("updateLat").value = asset.locLattitude;
+                                    document.getElementById("updateLong").value = asset.locLongitude;
+                                    document.getElementById("updateHOA").value = asset.hoaName;
                                     // Set the values of other input fields here                                    
                                 };
                                 xhr.send();
                             }
                         </script>
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" th:attr="data-id=${row.id}" onclick="deleteRow(this.getAttribute('data-id'))">Delete</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop" th:attr="data-id=${row.id}" th:disabled="${row.status == 'X'}" onclick="deleteRow(this.getAttribute('data-id'))">Delete</button>
                         <script>
                             function deleteRow(id){
                                 // Bind click event to Confirm button
@@ -69,7 +86,20 @@
                                 });
                             }
                         </script>
-                        <button type="button" class="btn btn-dark">Dispose</button>
+                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#disposeAsset" th:attr="data-id=${row.id}" th:disabled="${row.status == 'X'}" onclick="disposeRow(this.getAttribute('data-id'))">Dispose</button>
+                        <script>
+                            function disposeRow(id){
+                                // Bind click event to Confirm button
+                                $('#disposeAsset .btn-outline-danger').on('click', function() {
+                                    var xhr = new XMLHttpRequest();
+                                    xhr.open("GET", "/myEndpoint4?id=" + id);
+                                    xhr.send();
+                                    setTimeout(function() {
+                                        location.reload();
+                                    }, 2000);
+                                });
+                            }
+                        </script>
                         <button type="button" class="btn btn-dark">View History</button>
                     </div>
                 </th>
@@ -79,6 +109,5 @@
           
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </div>
-    <div th:replace="~{assetActions}"></div>
   </body>
 </html>
